style.css
/* ... */
body.dark .loader svg path,
body.dark .loader svg rect {
  fill: whitesmoke;
}
/* ? end dark mode */

body {
  background-color: var(--background);
  color: var(--font-color__default-main__dark);
  overflow-x: hidden;
  position: relative;
  font-size: var(--font-size__1);
}

html {
  /* scroll-behavior: smooth; */
}

img {
  pointer-events: none;
}

/* ? Loader */
.loader {
  display: none;
}
.loader.loader__active {
  background-image: radial-gradient(
    circle farthest-corner at 1.3% 2.8%,
    rgba(239, 249, 249, 1) 0%,
    rgba(182, 199, 226, 1) 100.2%
  );
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
}
.loader__content {
  width: 5rem;
  height: 5rem;
}

svg path,
svg rect {
  fill: salmon;
}

/* ? end Loader */

/* ? Gradient */
.blue__gradient {
  height: 50%;
  width: 80%;
  top: 0;
  z-index: -1;
  background-image: radial-gradient(
    circle farthest-corner at 10% 20%,
    rgba(37, 145, 251, 0.98) 0.1%,
    rgba(0, 7, 128, 1) 99.8%
  );
  filter: blur(50px);
  position: absolute;
}
.green__gradient {
  height: 50%;
  width: 80%;
  bottom: 0;
  z-index: -1;
  background-image: linear-gradient(to top, #feada6 0%, #f5efef 100%);
  filter: blur(50px);
  position: absolute;
  display: none;
}
/* .blue__gradient-3 {
  height: 70%;
  width: 80%;
  bottom: 3rem;
  right: -7rem;
  z-index: -1;
  background-image: linear-gradient(
    to top,
    lightgrey 0%,
    lightgrey 1%,
    #e0e0e0 26%,
    #efefef 48%,
    #d9d9d9 75%,
    #bcbcbc 100%
  );
  filter: blur(50px);
  position: absolute;
} */
.blue__gradient-2 {
  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
  height: 100%;
  width: 100%;
  z-index: -1;
  top: 20%;
  left: 40%;
  filter: blur(200px);
  position: absolute;
}
.purple__gradient {
  height: 50%;
  width: 80%;
  bottom: 0;
  z-index: -1;
  background-image: radial-gradient(
    circle 732px at -23.9% -25.1%,
    rgba(30, 39, 107, 1) 6.1%,
    rgba(188, 104, 142, 1) 100.2%
  );
  filter: blur(50px);
  position: absolute;
}
.blue__gradient-5 {
  height: 80%;
  width: 80%;
  top: -4rem;
  z-index: -1;
  background-image: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%);
  filter: blur(50px);
  position: absolute;
}
.pink__gradient-2 {
  height: 70%;
  width: 50%;
  top: 20%;
  left: 0;
  z-index: -1;
  background-image: linear-gradient(to top, #9795f0 0%, #fbc8d4 100%);
  filter: blur(300px);
  position: absolute;
}
.red__gradient {
  height: 30%;
  width: 50%;
  top: 5rem;
  right: -1rem;
  z-index: -2;
  background-image: radial-gradient(
    circle farthest-corner at 10% 20%,
    rgba(253, 193, 104, 1) 0%,
    rgba(251, 128, 128, 1) 90%
  );
  filter: blur(50px);
  position: absolute;
}
/* ? end Gradient */

/* * navbar */
/* for medium device (min-width: 640px) */
.max-width {
  padding: 0.5rem 1.5rem;
}

.navbar__logo {
  font-size: var(--fonst-size__logo-nav);
  color: #4e709d;
  font-weight: bold;
}
.navbar {
  display: flex;
  position: fixed;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  z-index: 9;
}
.navbar.fixed {
  /* background: rgb(210, 218, 255, 0.5); */
  background: rgba(231, 227, 227, 0.5);
  border-bottom: 1px solid white;
  backdrop-filter: blur(10px);
}
.navbar.fixed .navbar__logo {
  color: #1572a1;
  /* color: salmon; */
}
.nav-links {
  display: flex;
  list-style: none;
  gap: 0.7rem;
  align-items: center;
}
nav ul li a {
  text-decoration: none;
  color: var(--font-color__default-main__dark);
}
nav ul li a.active {
  color: var(--font-color__running-text);
}

/* ? hamburger-menu__start */
.ham {
  display: none;
  height: 40px;
  width: 40px;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  transition: transform 400ms;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  stroke: var(--hamburger-menu__icon__active);
}
.hamRotate.active {
  transform: rotate(45deg);
}
.hamRotate180.active {
  transform: rotate(180deg);
}
.line {
  fill: none;
  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
  stroke-width: 5.5;
  stroke-linecap: round;
  stroke: var(--hamburger-menu__icon);
}
.line.active {
  stroke: var(--font-color__default);
}
.ham1 .top {
  stroke-dasharray: 40 139;
}
.ham1 .bottom {
  stroke-dasharray: 40 180;
}
.ham1.active .top {
  stroke-dashoffset: -98px;
}
.ham1.active .bottom {
  stroke-dashoffset: -138px;
}
/* ? hamburger-menu__end*/

/* ? dark-light__mode */
/* dark-light__mode__default */
.theme input {
  font: 1em/1.5 Fredoka, sans-serif;
  cursor: pointer;
}
.theme {
  display: flex;
  /* ! larger */
  /* margin-top: 2rem; */
  cursor: pointer;
  align-items: center;
  -webkit-tap-highlight-color: transparent;
}
.theme__fill,
.theme__icon {
  transition: transform var(--transDur) ease-in-out;
}
.theme__fill {
  /* background-color: var(--bg); */
  /* display: block;
  mix-blend-mode: difference;
  position: fixed;
  inset: 0;
  height: 100%;
  transform: translateX(-100%); */
}
.theme__icon,
.theme__toggle {
  z-index: 1;
}
.theme__icon,
.theme__icon-part {
  position: absolute;
}
.theme__icon {
  display: block;
  top: 0.45rem;
  left: 0.45rem;
  width: 1rem;
  height: 1rem;
  /* top: 0.75em;
  left: 0.75em;
  width: 1.5em;
  height: 1.5em; */
}
.theme__icon-part {
  border-radius: 50%;
  box-shadow: 0.4em -0.4em 0 0.5em hsl(0, 0%, 100%) inset;
  top: calc(50% - 0.5em);
  left: calc(50% - 0.5em);
  width: 1em;
  height: 1em;
  transition: box-shadow var(--transDur) ease-in-out,
    opacity var(--transDur) ease-in-out, transform var(--transDur) ease-in-out;
  transform: scale(0.5);
}
.theme__icon-part ~ .theme__icon-part {
  background-color: hsl(0, 0%, 100%);
  border-radius: 0.05em;
  box-shadow: none;
  top: 50%;
  left: calc(50% - 0.05em);
  transform: rotate(0deg) translateY(0.5em);
  transform-origin: 50% 0;
  width: 0.1em;
  height: 0.2em;
}
/* ... */

